fix layout on ios

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -101,7 +101,7 @@
 }
 
 .max-container-height {
-  max-height: calc(100vh - 3.5rem - 1.5rem);
+  max-height: calc(100vh - 3.5rem - 1.5rem - 10rem);
 }
 
 @supports (-webkit-touch-callout: none) {
